--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         </div>
     </div>
 
+    <script src="config.js"></script>
     <script src="script.js" type="module"></script>
     <script>
         // 註冊 Service Worker
